clusters/apps/env/production/network-system/librespeed/app/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: librespeed
  annotations:
    kubernetes.io/ingress.class: "traefik-external"
    external-dns.alpha.kubernetes.io/hostname: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
    external-dns.alpha.kubernetes.io/target: ${DYNAMIC_DOMAIN}
  labels:
    external-dns/public: "true"
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: "Host(`${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}`)"
      services:
        - name: openspeedtest-librespeed
          port: 3000
  tls:
    secretName: heyjohn-wildcard-certificate
    domains:
      - main: ${INGRESSROUTE_SUBDOMAIN}.${FAMILY_DOMAIN}
